fix: improve templating with additional files and minimal flag

--- a/gitkeepr/templates/repo/README.md.j2
+++ b/gitkeepr/templates/repo/README.md.j2
@@ -1,5 +1,5 @@
-# Welcome to {{ repo_name }}
+# {{ repo_name }}
 
 ## Overview
 
-This is a template repository for {{ repo_name }}.
+This is a template repository for {{ repo_name }} by {{ user }}.
